Wed Nov 28 13:04:46 GMT 2001  Olly Betts <olly@survex.com>

	* docs/cgiparams.txt: Minor corrections and updates.

Wed Nov 28 13:03:40 GMT 2001  Olly Betts <olly@survex.com>

	* If we're asked for a page of hits beyond the end of the matches, clip to the
	  last page of matches rather than the first.

Wed Nov 28 13:02:31 GMT 2001  Olly Betts <olly@survex.com>

	* For an EXTENDED_QUERY, force the first page of hits.

Wed Nov 28 12:56:56 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Lower case terms when constructing the query (otherwise why
	  do we store them in the database that way? :-)

Wed Nov 28 12:36:49 GMT 2001  Olly Betts <olly@survex.com>

	* Fettled default query template.

Wed Nov 28 12:33:52 GMT 2001  Olly Betts <olly@survex.com>

	* Request one more match than the last we want to display so we can tell if the
	  next page of hits is empty or not - otherwise we risk offering a "next page"
	  link when there are no more hits.

Mon Nov 26 16:28:00 2001  James Aylett  <tartarus@users.sourceforge.net>

	* --no-recurse / -l option added; useful if your sites are
	  nested in their disc storage (particularly things like
	  http://example.com/ being a distinct site, with
	  http://example.com/product being within it)

	* --mime-type now really works (it was --mime-map in the code)

	* documentation updated further

Mon Nov 26 14:39:00 2001  James Aylett  <tartarus@users.sourceforge.net>

	* options parsing fixed so minimised/unrecognised long options
	  doesn't segfault

Mon Nov 26 14:00:13 2001  James Aylett  <tartarus@users.sourceforge.net>

	* omindex can now index part of a site (previously 'subsite')
	  by having an index base within the site's disc storage

Mon Nov 26 13:57:10 2001  James Aylett <tartarus@users.sourceforge.net>

	* Documentation updated for recent changes

Thu Nov 22 13:24:45 GMT 2001  Olly Betts <olly@survex.com>

	* Use $nice{} in query template, but don't use $freqs.  Use numbers as