@@ -1,3 +1,7 @@
+Wed Nov 28 14:03:48 GMT 2001  Olly Betts <olly@survex.com>
+
+	* Added $hostname{URL}; $version output now says "Xapian - omega <version>".
+
 Wed Nov 28 13:04:46 GMT 2001  Olly Betts <olly@survex.com>
 
 	* docs/cgiparams.txt: Minor corrections and updates.
